test passed(all): SuperTypeTokenTest